--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h2> Maulana Tegar Danuputra </h2>
     <h3> Lokasi Pusat Pendidikan di Kecamatan Wiyung </h3>
 
-    <img src="GooglemyMaps.png" style="width: 700; height: 400px;">
+    <img src="geografipeta.png" style="width: 700; height: 400px;">
 <body>
 
     
